# opencv_demo

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
examples/: CMakeLists.txt  detect_face.hpp  webcam.cpp
